--- a/RSingh_part/Project4_RSingh.ipynb
+++ b/RSingh_part/Project4_RSingh.ipynb
@@ -1110,8 +1110,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
+   "id": "f4014175-4fca-44a2-af04-4260548b2f92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>val_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.207576</td>\n",
+       "      <td>0.432671</td>\n",
+       "      <td>1.258315</td>\n",
+       "      <td>0.378676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.196817</td>\n",
+       "      <td>0.432230</td>\n",
+       "      <td>1.281071</td>\n",
+       "      <td>0.382353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.174590</td>\n",
+       "      <td>0.431347</td>\n",
+       "      <td>1.278408</td>\n",
+       "      <td>0.365809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.178044</td>\n",
+       "      <td>0.434437</td>\n",
+       "      <td>1.228455</td>\n",
+       "      <td>0.384191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.193376</td>\n",
+       "      <td>0.429581</td>\n",
+       "      <td>1.254514</td>\n",
+       "      <td>0.393382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.186668</td>\n",
+       "      <td>0.434437</td>\n",
+       "      <td>1.257593</td>\n",
+       "      <td>0.437500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.182994</td>\n",
+       "      <td>0.441501</td>\n",
+       "      <td>1.252331</td>\n",
+       "      <td>0.402574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1.194039</td>\n",
+       "      <td>0.424724</td>\n",
+       "      <td>1.296297</td>\n",
+       "      <td>0.378676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1.190011</td>\n",
+       "      <td>0.430464</td>\n",
+       "      <td>1.287999</td>\n",
+       "      <td>0.380515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1.170460</td>\n",
+       "      <td>0.446358</td>\n",
+       "      <td>1.272535</td>\n",
+       "      <td>0.415441</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       loss  accuracy  val_loss  val_accuracy\n",
+       "0  1.207576  0.432671  1.258315      0.378676\n",
+       "1  1.196817  0.432230  1.281071      0.382353\n",
+       "2  1.174590  0.431347  1.278408      0.365809\n",
+       "3  1.178044  0.434437  1.228455      0.384191\n",
+       "4  1.193376  0.429581  1.254514      0.393382\n",
+       "5  1.186668  0.434437  1.257593      0.437500\n",
+       "6  1.182994  0.441501  1.252331      0.402574\n",
+       "7  1.194039  0.424724  1.296297      0.378676\n",
+       "8  1.190011  0.430464  1.287999      0.380515\n",
+       "9  1.170460  0.446358  1.272535      0.415441"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert training history to data frame\n",
+    "history_opt1_df = pd.DataFrame(history_opt1.history)\n",
+    "history_opt1_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "c28c5eae-a4f4-4641-9e74-4e1ee22a6b4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the history record to csv\n",
+    "h_df.to_csv('./TrainingHistory/history_opt1_df.csv', index=False, header = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "4858191f-3077-4d9e-bd63-f87ab423f512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('./ModelHistory/ccn_resnet50_model_history_opt1.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52ea9767-e8a8-435c-a37a-022d2e12d069",
    "metadata": {},
    "outputs": [],
    "source": []
