upload updated files

--- a/RSingh_part/Plot_ModelsHistory.ipynb
+++ b/RSingh_part/Plot_ModelsHistory.ipynb
@@ -32,6 +32,16 @@
     "id": "_zI-MW1S0Rn4"
    },
    "source": [
+    "# MODEL 1:\n",
+    "\n",
+    "### Overview\n",
+    "A basic Convolutional Neural Network (CNN) designed for multi-class classification.\n",
+    "\n",
+    "### Model Layers\n",
+    "1.⁠ ⁠*Convolutional Layers*: Extracts spatial features from the input images.\n",
+    "2.⁠ ⁠*Flattening Layer*: Converts 2D feature maps into a 1D vector for input into the Dense layers.\n",
+    "3.⁠ ⁠*Dense Layers*: Final layers responsible for classification.\n",
+    "\n",
     "### Key Aspects\n",
     "1. **Epochs**: The model is trained for **20 epochs** with early stopping, allowing the training to halt sooner if the validation loss stops improving. Optimal performance is generally reached at **epoch 8**.\n",
     "2. **Loss Function**: **Categorical cross-entropy** is used to measure prediction error for multi-class classification, optimizing the model for accuracy across four classes.\n",
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "_exOAQRsxQ5p",
    "metadata": {
     "colab": {
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "6352f711-7e06-4736-93f3-6995140b7fb8",
    "metadata": {
     "id": "6352f711-7e06-4736-93f3-6995140b7fb8",
@@ -221,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "1750127e-4bb9-464e-a6e8-f8ec518dd78e",
    "metadata": {
     "colab": {
@@ -303,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "cee66473-99fb-48ab-9657-7b312a195edc",
    "metadata": {
     "id": "cee66473-99fb-48ab-9657-7b312a195edc",
@@ -388,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "sDzNtO6TBgH-",
    "metadata": {
     "colab": {
@@ -424,7 +434,7 @@
       "\u001b[0;31mKeyError\u001b[0m: 'Trial ID'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 42\u001b[0m\n\u001b[1;32m     40\u001b[0m plt\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     41\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFinal Accuracy and Validation Accuracy by Trial ID\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 42\u001b[0m plt\u001b[38;5;241m.\u001b[39mxticks(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTrial ID\u001b[39m\u001b[38;5;124m'\u001b[39m])  \u001b[38;5;66;03m# Set x-ticks to be the Trial IDs\u001b[39;00m\n\u001b[1;32m     43\u001b[0m plt\u001b[38;5;241m.\u001b[39mlegend()\n\u001b[1;32m     44\u001b[0m plt\u001b[38;5;241m.\u001b[39mgrid(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m, linestyle\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--\u001b[39m\u001b[38;5;124m'\u001b[39m, alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.7\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[22], line 42\u001b[0m\n\u001b[1;32m     40\u001b[0m plt\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     41\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFinal Accuracy and Validation Accuracy by Trial ID\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 42\u001b[0m plt\u001b[38;5;241m.\u001b[39mxticks(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTrial ID\u001b[39m\u001b[38;5;124m'\u001b[39m])  \u001b[38;5;66;03m# Set x-ticks to be the Trial IDs\u001b[39;00m\n\u001b[1;32m     43\u001b[0m plt\u001b[38;5;241m.\u001b[39mlegend()\n\u001b[1;32m     44\u001b[0m plt\u001b[38;5;241m.\u001b[39mgrid(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m, linestyle\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--\u001b[39m\u001b[38;5;124m'\u001b[39m, alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.7\u001b[39m)\n",
       "File \u001b[0;32m~/Desktop/Applications/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3893\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[1;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3895\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[0;32m~/Desktop/Applications/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3798\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3793\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3794\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3795\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3796\u001b[0m     ):\n\u001b[1;32m   3797\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3799\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3800\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3801\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3803\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[0;31mKeyError\u001b[0m: 'Trial ID'"
@@ -504,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "u6Z8KvBK9UjJ",
    "metadata": {
     "colab": {
@@ -613,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "Ny-9QtFsL3oN",
    "metadata": {
     "colab": {
@@ -691,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "U8UqsOE9MxmP",
    "metadata": {
     "colab": {
@@ -758,11 +768,11 @@
    "source": [
     "# MODEL 3\n",
     "\n",
-    "**Convolutional Layers**\n",
+    "### Model Layers\n",
+    "1.⁠ ⁠*Convolutional Layers*: Extracts spatial features from the input images.\n",
+    "2.⁠ ⁠*Flattening Layer*: Converts 2D feature maps into a 1D vector for input into the Dense layers.\n",
+    "3.⁠ ⁠*Dense Layers*: Final layers responsible for classification.\n",
     "\n",
-    "**Flattening Layer**\n",
-    "\n",
-    "**Dense Layers**\n",
     "\n",
     "\n",
     "The model was compiled with the Adam optimizer and trained using categorical cross-entropy loss for a total of **20 epochs**.\n",
@@ -782,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "NHg5ClrlMtv6",
    "metadata": {
     "colab": {
@@ -836,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "DssmlFR_V9BS",
    "metadata": {
     "colab": {
@@ -909,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "tS-V4fvQbtpo",
    "metadata": {
     "colab": {
@@ -989,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "_t0NL3r-dl-1",
    "metadata": {
     "colab": {
@@ -1064,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "LoZEau-EiFwe",
    "metadata": {
     "colab": {
@@ -1146,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "OapwZc0zja4E",
    "metadata": {
     "colab": {
@@ -1224,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "lKumJuxEjQ0T",
    "metadata": {
     "colab": {
@@ -1308,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "d9VgxZPOjDXN",
    "metadata": {
     "colab": {
