--- a/RSingh_part/Plot_ModelsHistory.ipynb
+++ b/RSingh_part/Plot_ModelsHistory.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "The Data Visualization module provides functions to create and customize various types of visualizations to help users gain insights from their data. The module utilizes Matplotlib libraries for easy plotting of graphs.\n",
     "\n",
-    "Matplotlib documentation : [matplotlib](https://matplotlib.org/stable/index.html)"
+    "Matplotlib documentation : [matplotlib](https://matplotlib.org/stable/index.html)\n"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "id": "_exOAQRsxQ5p",
    "metadata": {
     "colab": {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "id": "6352f711-7e06-4736-93f3-6995140b7fb8",
    "metadata": {
     "id": "6352f711-7e06-4736-93f3-6995140b7fb8",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "id": "1750127e-4bb9-464e-a6e8-f8ec518dd78e",
    "metadata": {
     "colab": {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "id": "cee66473-99fb-48ab-9657-7b312a195edc",
    "metadata": {
     "id": "cee66473-99fb-48ab-9657-7b312a195edc",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "id": "sDzNtO6TBgH-",
    "metadata": {
     "colab": {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "id": "u6Z8KvBK9UjJ",
    "metadata": {
     "colab": {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "id": "Ny-9QtFsL3oN",
    "metadata": {
     "colab": {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "id": "U8UqsOE9MxmP",
    "metadata": {
     "colab": {
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "id": "NHg5ClrlMtv6",
    "metadata": {
     "colab": {
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "id": "DssmlFR_V9BS",
    "metadata": {
     "colab": {
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "id": "tS-V4fvQbtpo",
    "metadata": {
     "colab": {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "id": "_t0NL3r-dl-1",
    "metadata": {
     "colab": {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 72,
    "id": "LoZEau-EiFwe",
    "metadata": {
     "colab": {
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 73,
    "id": "OapwZc0zja4E",
    "metadata": {
     "colab": {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 74,
    "id": "lKumJuxEjQ0T",
    "metadata": {
     "colab": {
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "id": "d9VgxZPOjDXN",
    "metadata": {
     "colab": {
